# python-ai-marketing-tools

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 43ff58bd56ce_.py  8d74c3d5d013_.py
anotacoes/: steps
api/: courses.py  sections.py  users.py
api/utils/: courses.py  eleven_labs.py  users.py
db/: db_setup.py
db/models/: user.py
