[tool.poetry]
name = "pycharmprojects"
version = "0.1.0"
description = ""
authors = ["ubuntu22 <rodolfo.dsantos@grupomateus.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
SQLAlchemy = "^2.0.27"
SQLAlchemy-Utils = "^0.41.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = "^2.6.2"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
